--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!--OUR TEAM-->
         <section class="team">
             <div class="contener">
-                <h2 class="team">Наша команда</h2>
+                <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="team-list-item">
                         <img class="team-list-img" src="./images/jpg/person1.jpg" alt="Игорь Демьяненко" width="270" height="260">
