--- a/index.html
+++ b/index.html
@@ -32,10 +32,21 @@
             <address class="address">
                 <ul class="address-list">
                     <li class="address-list-item">
-                        <a class="address-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            <a class="address-list-link" href="mailto:info@devstudio.com">
+                                <svg width="16px" height="12px" class="address-list-mail-icon">
+                                    <use href="./images/sprite.svg#envelope">
+                                    </use>
+                                </svg>
+                                info@devstudio.com
+                            </a>
                     </li>
                     <li class="address-list-item">
-                        <a class="address-list-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="address-list-link" href="tel:+380961111111">
+                            <svg width="10px" height="16px" class="address-list-mail-icon">
+                                <use href="./images/sprite.svg#smartphone">
+                                </use>
+                            </svg>
+                            +38 096 111 11 11</a>
                     </li>
                 </ul>
             </address>
@@ -108,6 +119,40 @@
                         <div class="team-list-about">
                             <h3 class="team-list-name">Игорь Демьяненко</h3>
                             <p class="team-list-profession" lang="en">Product Designer</p>
+                            <ul class="social-list">
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#instagram" >
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#twitter">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#facebook">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#linkedin">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -115,6 +160,40 @@
                         <div class="team-list-about">
                             <h3 class="team-list-name">Ольга Репина</h3>
                             <p lang="en" class="team-list-profession">Frontend Developer</p>
+                            <ul class="social-list">
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#instagram">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#twitter">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#facebook">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#linkedin">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -122,6 +201,40 @@
                         <div class="team-list-about">
                             <h3 class="team-list-name">Николай Тарасов</h3>
                             <p lang="en" class="team-list-profession">Marketing</p>
+                            <ul class="social-list">
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#instagram">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#twitter">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#facebook">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#linkedin">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -129,33 +242,170 @@
                         <div class="team-list-about">
                             <h3 class="team-list-name">Михаил Ермаков</h3>
                             <p lang="en" class="team-list-profession">UI Designer</p>
+                            <ul class="social-list">
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#instagram">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#twitter">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#facebook">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link" href="">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/sprite.svg#linkedin">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
             </div>
+        </section>
+
+        <!--CLIENTS-->
+        <section class="clients">
+            <div class="contener">
+                <h2 class="clients-title">Постоянные клиенты</h2>
+                <ul class="clients-list">
+                    <li class="clients-list-item">
+                        <a class="clients-list-link" href="">
+                            <svg class="client-list-icon"  width="44px" height="49px">
+                                <use href="./images/sprite.svg#logo01">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a class="clients-list-link" href="">
+                            <svg class="client-list-icon" width="40px" height="52px">
+                                <use href="./images/sprite.svg#logo02">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a class="clients-list-link" href="">
+                            <svg class="client-list-icon" width="41px" height="43px">
+                                <use href="./images/sprite.svg#logo03">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a class="clients-list-link" href="">
+                            <svg class="client-list-icon" width="80px" height="42px">
+                                <use href="./images/sprite.svg#logo04">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a class="clients-list-link" href="">
+                            <svg class="client-list-icon" width="59px" height="47px">
+                                <use href="./images/sprite.svg#logo05">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a class="clients-list-link" href="">
+                            <svg class="client-list-icon" width="88px" height="45px">
+                                <use href="./images/sprite.svg#logo06">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+
+                </ul>
+
+
+            </div>
+
         </section>
     </main>
 
     <footer class="footer">
         <!--CONTACT INFORMATION-->
         <div class="contener">
-            <h2 class="visually-hidden">Контакты</h2>
-            <a class="logo" href="#" lang="en"><span class="logo-first">Web</span>Studio </a>
-            <address class="contact">
-                <ul class="contact-list">
-                    <li class="contact-list-item">
-                        <a class="contact-list-city" href="https://goo.gl/maps/mL1RKWru3X3cFEzS8" target="_blank"
-                            rel="noopener noroferrer"> г. Киев,
-                            пр-т Леси Украинки, 26 </a>
+            <div class="footer-left-side">
+                <h2 class="visually-hidden">Контакты</h2>
+                <a class="logo" href="#" lang="en"><span class="logo-first">Web</span>Studio </a>
+                <address class="contact">
+                    <ul class="contact-list">
+                        <li class="contact-list-item">
+                            <a class="contact-list-city" href="https://goo.gl/maps/mL1RKWru3X3cFEzS8" target="_blank"
+                                rel="noopener noroferrer"> г. Киев,
+                                пр-т Леси Украинки, 26 </a>
+                        </li>
+                        <li class="contact-list-item">
+                            <a class="contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="contact-list-item">
+                            <a class="contact-list-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-right-side">
+                <p>Присоединяйтесь</p>
+                <ul class="social-list">
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon">
+                                <use href="./images/sprite.svg#instagram">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-list-item">
-                        <a class="contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon">
+                                <use href="./images/sprite.svg#twitter">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-list-item">
-                        <a class="contact-list-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon">
+                                <use href="./images/sprite.svg#facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon">
+                                <use href="./images/sprite.svg#linkedin">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+
+
+            </div>
+            
         </div>
     </footer>
 </body>
