--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
                 
                 <ul class="example-list">
                         <li class="example-list-item">
-                            <a href="#">
+                            <a class="example-list-link" href="#">
                                 <img class="example-list-img" src="./images/jpg/project-1.jpg" alt="1 проект" width="370" height="294">
                                 <div class="example-list-information">
                                     <h2 class="example-list-title">
