--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
             <div class="contener">
                 <h2 class="visually-hidden">Особенности</h2>
                 <ul class="advantages-list">
-                    <li class="advantages-list-item">
-                        <h3 class="advantages-list-item-title icon-1">Внимание к деталям</h3>
+                    <li class="advantages-list-item  icon-1">
+                        <h3 class="advantages-list-item-title">Внимание к деталям</h3>
                         <p class="advantages-list-item-text">Идейные соображения, а также начало повседневной работы по формированию
                             позиции.</p>
                     </li>
-                    <li class="advantages-list-item ">
-                        <h3 class="advantages-list-item-title icon-2">Пунктуальность</h3>
+                    <li class="advantages-list-item icon-2 ">
+                        <h3 class="advantages-list-item-title ">Пунктуальность</h3>
                         <p class="advantages-list-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет
                             за собой.</p>
                     </li>
-                    <li class="advantages-list-item ">
-                        <h3 class="advantages-list-item-title icon-3">Планирование</h3>
+                    <li class="advantages-list-item icon-3">
+                        <h3 class="advantages-list-item-title ">Планирование</h3>
                         <p class="advantages-list-item-text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
-                    <li class="advantages-list-item ">
-                        <h3 class=" advantages-list-item-title icon-4">Современные технологии</h3>
+                    <li class="advantages-list-item icon-4 ">
+                        <h3 class=" advantages-list-item-title ">Современные технологии</h3>
                         <p class="advantages-list-item-text">Значимость этих проблем настолько очевидна, что реализация плановых
                             заданий.</p>
                     </li>
