--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
                             </a>
                         </li>
                         <li class="example-list-item">
-                            <a href="#">
+                            <a class="example-list-link" href="#">
                                 <img class="example-list-img" src="./images/jpg/project-2.jpg" alt="2 проект" width="370" height="294">
                                 <div class="example-list-information">
                                     <h2 class="example-list-title">
@@ -103,7 +103,7 @@
                             </a>
                         </li>
                         <li class="example-list-item">
-                            <a href="#">
+                            <a class="example-list-link" href="#">
                                 <img class="example-list-img" src="./images/jpg/project-3.jpg" alt="3 проект" width="370" height="294">
                                 <div class="example-list-information">
                                     <h2 class="example-list-title">
@@ -116,7 +116,7 @@
                             </a>
                         </li>
                         <li class="example-list-item">
-                            <a href="#">
+                            <a class="example-list-link" href="#">
                                 <img class="example-list-img" src="./images/jpg/project-4.jpg" alt="4 проект" width="370" height="294">
                                 <div class="example-list-information">
                                     <h2 class="example-list-title">
@@ -129,7 +129,7 @@
                             </a>
                         </li>
                         <li class="example-list-item">
-                            <a href="#">
+                            <a  class="example-list-link" href="#">
                                 <img class="example-list-img" src="./images/jpg/project-5.jpg" alt="5 проект" width="370" height="294">
                                 <div class="example-list-information">
                                     <h2 class="example-list-title">
@@ -142,7 +142,7 @@
                             </a>
                         </li>
                         <li class="example-list-item">
-                            <a href="#">
+                            <a  class="example-list-link" href="#">
                                 <img class="example-list-img" src="./images/jpg/project-6.jpg" alt="6 проект" width="370" height="294">
                                 <div class="example-list-information">
                                     <h2 class="example-list-title">
@@ -155,7 +155,7 @@
                             </a>
                         </li>
                         <li class="example-list-item">
-                            <a href="#">
+                            <a class="example-list-link" href="#">
                                 <img class="example-list-img" src="./images/jpg/project-7.jpg" alt="7 проект" width="370" height="294">
                                 <div class="example-list-information">
                                     <h2 class="example-list-title">
@@ -168,7 +168,7 @@
                             </a>
                         </li>
                         <li class="example-list-item">
-                            <a href="#">
+                            <a  class="example-list-link" href="#">
                                 <img class="example-list-img" src="./images/jpg/project-8.jpg" alt="8 проект" width="370" height="294">
                                 <div class="example-list-information">
                                     <h2 class="example-list-title">
@@ -181,7 +181,7 @@
                             </a>
                         </li>
                         <li class="example-list-item">
-                            <a href="#">
+                            <a class="example-list-link" href="#">
                                 <img class="example-list-img" src="./images/jpg/project-9.jpg" alt="9 проект" width="370" height="294">
                                 <div class="example-list-information">
                                     <h2 class="example-list-title">
